--- a/icons/manifest.json
+++ b/icons/manifest.json
@@ -1,9 +1,6 @@
 {
-  "name": "cartoon",
-  "short_name": "cartoon",
-  "lang": "zh-TW",
-  "display": "standalone",
-   "icons": [
+ "name": "App",
+ "icons": [
   {
    "src": "\/android-icon-36x36.png",
    "sizes": "36x36",
